--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     ]
   },
   "dependencies": {
+    "@mapbox/vector-tile": "^1.3.1",
     "earcut": "^2.0.8",
     "eventemitter3": "^1.1.1",
     "geojson-merge": "^0.1.0",
@@ -87,11 +88,12 @@
     "lodash.assign": "^4.0.2",
     "lodash.throttle": "^4.0.0",
     "lru-cache": "^4.0.0",
+    "pbf": "^3.1.0",
     "promise-polyfill": "^6.0.2",
     "reqwest": "^2.0.5",
     "shortid": "^2.2.6",
     "text-encoding": "^0.6.1",
-    "three": "^0.74.0",
+    "three": "^0.101.1",
     "topojson": "^1.6.24",
     "xhr2": "^0.1.3"
   }
