--- a/package.json
+++ b/package.json
@@ -4,12 +4,7 @@
   "description": "A framework for 3D geospatial visualisation in the browser",
   "main": "dist/vizicities.js",
   "scripts": {
-    "test": "gulp",
-    "lint": "gulp lint",
-    "test-browser": "gulp test-browser",
-    "watch": "gulp watch",
-    "build": "gulp build",
-    "coverage": "gulp coverage"
+    "build": "webpack"
   },
   "repository": {
     "type": "git",
@@ -35,55 +30,15 @@
   },
   "homepage": "https://github.com/UDST/vizicities",
   "devDependencies": {
-    "babel-core": "^5.2.17",
-    "babel-eslint": "^6.0.4",
-    "babel-loader": "^5.3.2",
-    "chai": "^3.2.0",
-    "del": "^1.1.1",
-    "eslint": "^2.12.0",
-    "glob": "^5.0.14",
-    "gulp": "^3.8.10",
-    "gulp-babel": "^5.0.0",
-    "gulp-eslint": "^1.0.0",
-    "gulp-filter": "^3.0.0",
-    "gulp-istanbul": "^0.10.0",
-    "gulp-jscs": "^3.0.0",
-    "gulp-livereload": "^3.8.1",
-    "gulp-load-plugins": "^0.10.0",
-    "gulp-mocha": "^2.0.0",
-    "gulp-plumber": "^1.0.1",
-    "gulp-rename": "^1.2.0",
-    "gulp-sourcemaps": "^1.3.0",
-    "gulp-uglify": "^1.5.2",
-    "gulp-util": "^3.0.6",
-    "isparta": "^3.0.3",
-    "json-loader": "^0.5.3",
-    "mocha": "^2.1.0",
-    "sinon": "^1.12.2",
-    "sinon-chai": "^2.7.0",
-    "vinyl-source-stream": "^1.0.0",
-    "webpack": "^1.12.2",
-    "webpack-stream": "^2.1.1"
-  },
-  "babelBoilerplateOptions": {
-    "entryFileName": "vizicities",
-    "mainVarName": "VIZI",
-    "mochaGlobals": [
-      "stub",
-      "spy",
-      "expect",
-      "sandbox",
-      "mock",
-      "useFakeTimers",
-      "useFakeXMLHttpRequest",
-      "useFakeServer"
-    ]
+    "webpack": "^5.89.0",
+    "webpack-cli": "^5.1.4"
   },
   "dependencies": {
     "@mapbox/vector-tile": "^1.3.1",
     "earcut": "^2.0.8",
     "eventemitter3": "^1.1.1",
     "geojson-merge": "^0.1.0",
+    "gsap": "^3.12.2",
     "hammerjs": "^2.0.6",
     "lodash.assign": "^4.0.2",
     "lodash.throttle": "^4.0.0",
@@ -95,6 +50,7 @@
     "text-encoding": "^0.6.1",
     "three": "^0.101.1",
     "topojson": "^1.6.24",
+    "util": "^0.12.5",
     "xhr2": "^0.1.3"
   }
 }
