--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
   },
   "homepage": "https://github.com/UDST/vizicities",
   "devDependencies": {
+    "css-loader": "^6.8.1",
+    "style-loader": "^3.3.3",
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4"
   },
