--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A framework for 3D geospatial visualisation in the browser",
   "main": "dist/vizicities.js",
   "scripts": {
-    "build": "webpack"
+    "build": "webpack --config ./webpack.config.js"
   },
   "repository": {
     "type": "git",
@@ -36,7 +36,10 @@
     "webpack-cli": "^5.1.4"
   },
   "dependencies": {
+    "@babel/core": "^7.23.2",
+    "@babel/preset-env": "^7.23.2",
     "@mapbox/vector-tile": "^1.3.1",
+    "babel-loader": "^9.1.3",
     "earcut": "^2.0.8",
     "eventemitter3": "^1.1.1",
     "geojson-merge": "^0.1.0",
